--- a/public/index.html
+++ b/public/index.html
@@ -31,5 +31,7 @@ crossorigin="anonymous"></script>
 integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
 crossorigin="anonymous"></script>
 
+<script src = "extend.js"></script>
+
   </body>
 </html>
